resolved viewinput problems

--- a/for old test/index.html
+++ b/for old test/index.html
@@ -33,6 +33,12 @@
 	<body>
 
 		<div id="inlineDatepicker"></div>
+		<script>
+		function myFunction(){
+			alert('ok')
+		}
+		</script>
+		<input class="natico" value="" type="text" onchange="myFunction()">
 	
 	</body>
 </html>
